# CvTask-Python

./: README.md  init_dev_env.sh  init_env.sh  install_pkg.sh
cvtask/: pyproject.toml
cvtask/tests/: test_cvtask.py
src/bash/io/prompt/: prompt_user.sh
src/python/dynamic/: pip_install.py
src/python/io/path/: tk_select_filename.py
